--- a/templates/index.html
+++ b/templates/index.html
@@ -114,6 +114,8 @@
         display: flex;
         gap: 10px;
         flex-wrap: wrap;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     select, input, button {
@@ -139,6 +141,9 @@
 
     input {
         flex: 1 1 100%;
+        min-width: 0;
+        width: 100%;
+        box-sizing: border-box;
     }
 
     button {
